Fix some minor CSS spacing, add preliminary css for tablet view

--- a/less/global.less
+++ b/less/global.less
@@ -24,7 +24,7 @@ body {
 
 .container {
   display: flex;
-  max-width: 1200px;
+  max-width: 1140px;
   padding: 0 15px;
   margin: 0 auto;
 }
