--- a/less/header.less
+++ b/less/header.less
@@ -27,6 +27,7 @@
 
 .nav {
   width: 100vw;
+  font-size: 18px;
 
   &__list {
     display: flex;
